# docs/swagger.json
@@ -31,7 +31,7 @@
                     "default": {
                         "description": "Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_timohahaa_transcoder_internal_utils_render.HTTPError"
+                            "$ref": "#/definitions/render.HTTPError"
                         }
                     }
                 }
@@ -141,7 +141,7 @@
                     "200": {
                         "description": "Task progress",
                         "schema": {
-                            "$ref": "#/definitions/tasks.taskProgress"
+                            "$ref": "#/definitions/internal_composer_handlers_http_v1_tasks.taskProgress"
                         }
                     },
                     "default": {
@@ -230,23 +230,17 @@
                 },
                 "source": {
                     "$ref": "#/definitions/github_com_timohahaa_transcoder_internal_composer_modules_task.Source"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         },
-        "github_com_timohahaa_transcoder_internal_utils_render.HTTPError": {
+        "internal_composer_handlers_http_v1_tasks.taskProgress": {
             "type": "object",
             "properties": {
-                "detail": {
-                    "type": "string"
-                },
-                "invalid_params": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/validate.InvalidParamErr"
-                    }
-                },
-                "message": {
-                    "type": "string"
+                "progress": {
+                    "type": "integer"
                 }
             }
         },
@@ -264,14 +258,6 @@
                 },
                 "message": {
                     "type": "string"
-                }
-            }
-        },
-        "tasks.taskProgress": {
-            "type": "object",
-            "properties": {
-                "progress": {
-                    "type": "integer"
                 }
             }
         },
